# webd — axum/tokio web backend (docs/specs/webd.md, contract D2).
#
# Task 5.1a slice: serves a READ-ONLY REST API over the indexd SQLite
# catalog plus the static-SPA host plumbing (placeholder bundle). The DB
# is opened read-only (SQLITE_OPEN_READ_ONLY) — indexd is the sole writer.
# No mutations, no video streaming, no auth, no SSE in this slice.
[package]
name = "webd"
description = "TeslaUSB B-1 web backend: read-only REST API over the indexd SQLite catalog + static SPA host."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "webd"
path = "src/lib.rs"

[[bin]]
name = "webd"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
# Bridges a tokio broadcast receiver into a `Stream` for the `GET /api/jobs`
# SSE endpoint (BroadcastStream + StreamExt combinators); no extra runtime.
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# STORED-only zip writer for the clip export endpoint (Task 5.1b). mp4 is
# already H.264-compressed, so no deflate feature is pulled in.
zip = { version = "7", default-features = false }
# The export builds its zip into an anonymous on-disk tempfile (the zip
# writer needs Seek), then streams + auto-unlinks it — never the whole zip
# in memory. Promoted from a dev-dependency to a runtime dependency.
tempfile = "3"

# Unix-only: the read-only device-status endpoints (system/storage health,
# webd.md §2.2/§3) need statvfs(3) + access(2). rustix exposes both via SAFE
# wrappers (the workspace denies unsafe_code), and is already in the tree as a
# transitive dep. cfg(unix)-gated so the non-Linux build host still compiles
# (statvfs/writability degrade to None/false there).
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
# Tests build a fixture catalog via indexd's authoritative migration
# ladder so they bind to the as-built schema. webd never depends on
# indexd at runtime — production code is a self-contained read-only layer.
indexd = { path = "../indexd" }
tower = { version = "0.5", features = ["util"] }
# Frame-by-frame body inspection: proves the stream endpoint emits a large
# file as multiple bounded chunks rather than one buffered blob.
http-body-util = "0.1"

[lints]
workspace = true
